--- a/código/forma_pagamento.html
+++ b/código/forma_pagamento.html
@@ -22,7 +22,7 @@
             <div class="row justify-content-center">
                 <div class="welcome col-md-8 text-center">
                     <div class="message">
-                        <h1 class="msgWelcome">ESCOLHA A FORMA DE PAGAMENTO</h1>
+                        <h1 class="msgWelcome" id="msgWelcome">ESCOLHA A FORMA DE PAGAMENTO</h1>
                     </div>
                 </div>
             </div>
