--- a/código/loading_tela_deb_aceito.html
+++ b/código/loading_tela_deb_aceito.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -20,10 +20,20 @@
         <div class="container">
             <br>
             <div class="row justify-content-center">
-                <div class="welcome col-md-4 text-center">
+                <div class="welcome col-md-8 text-center">
                     <div class="message">
-                        <h1 class="msgWelcomes" id="msgWelcome">Seja Bem Vindo</h1>
+                        <h1 class="msgWelcome" id="msgWelcome">aaaVENDA NO DÉBITO</h1>
+                        <div id="load">
+                            <div>E</div>
+                            <div>D</div>
+                            <div>R</div>
+                            <div>A</div>
+                            <div>U</div>
+                            <div>G</div>
+                            <div>A</div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -31,19 +41,17 @@
 
     <div class="BG-Container2">
         <div class="container">
-            <div class="holder_btns">
-
-                <a class="m_botao" id="btn1" href="/código/tipo_recarga.html">Cartão top</a>
-                <a type="button" class="m_botao" id="btn2">QR-CODE</a>
-                <a type="button" class="m_botao" id="btn3" href="/código/tipo_recarga.html">Bilhete Único</a>
-            </div>
+            <div class="loading-containe">
+                <div id="loading-bara"></div>
+              </div>              
         </div>
     </div>
 
-    <div class="BG-Container3">
-        <div class="basecontainer">
-            <p id="text_base">CENTRAL DE ATENDIMENTO AO CLIENTE (11)3888-2200</p>
-            <a type="button" class="cou_botao" id="btn4">Consultar QR-CODE</a>
+    <div class="BG-Container3" id="basecontainer_tiporecarga">
+        <div class="basecontainer" id="voltarmargin">
+            <a href="opcao_sel_debito.html">
+                <button type="button" class="botao" id="btn_voltar">Cancelar</button>
+            </a>
         </div>
     </div>
 
