--- a/código/opcao_sel_debito.html
+++ b/código/opcao_sel_debito.html
@@ -22,7 +22,7 @@
             <div class="row justify-content-center">
                 <div class="welcome col-md-8 text-center">
                     <div class="message">
-                        <h1 class="msgWelcome">OPÇÃO SELECIONADA: DÉBITO</h1>
+                        <h1 class="msgWelcome" id="msgWelcome">OPÇÃO SELECIONADA: DÉBITO</h1>
                         <h2 class="msgWelcome">SELECIONE O VALOR DESEJADO</h2>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
 
                         <div class="modal_footer">
                             <a href="#" class="modal__footer-btn-nao"> Não </a>
-                            <a href="#" class="modal__footer-btn-sim"> Sim </a>
+                            <a href="loading_tela_deb.html" class="modal__footer-btn-sim"> Sim </a>
                         </div>
 
                     </div>
@@ -91,7 +91,7 @@
 
     <div class="BG-Container3" id="basecontainer_tiporecarga">
         <div class="basecontainer" id="voltarmargin">
-            <a href="tipo_recarga.html">
+            <a href="forma_pagamento.html">
                 <button type="button" class="botao" id="btn_voltar">Voltar</button>
             </a>
         </div>
