--- a/código/loading_tela_deb_aceito.html
+++ b/código/loading_tela_deb_aceito.html
@@ -22,7 +22,7 @@
             <div class="row justify-content-center">
                 <div class="welcome col-md-8 text-center">
                     <div class="message">
-                        <h1 class="msgWelcome" id="msgWelcome">aaaVENDA NO DÉBITO</h1>
+                        <h1 class="msgWelcome" id="msgWelcome">VENDA NO DÉBITO</h1>
                         <div id="load">
                             <div>E</div>
                             <div>D</div>
