--- a/código/transacao_aprovada_din.html
+++ b/código/transacao_aprovada_din.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -20,10 +20,11 @@
         <div class="container">
             <br>
             <div class="row justify-content-center">
-                <div class="welcome col-md-4 text-center">
+                <div class="welcome col-md-8 text-center">
                     <div class="message">
-                        <h1 class="msgWelcomes" id="msgWelcome">Seja Bem Vindo!</h1>
+                        <h1 class="msgWelcome" id="msgWelcome">TRANSAÇÃO CONCLUÍDA</h1>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -31,22 +32,13 @@
 
     <div class="BG-Container2">
         <div class="container">
-            <div class="holder_btns">
-
-                <a class="m_botao" id="btn1" href="/código/insira_cartao_top.html">Cartão top</a>
-                <a type="button" class="m_botao" id="btn2" href="/código/qr_opcoes_compras.html">QR-CODE</a>
-                <a type="button" class="m_botao" id="btn3" href="/código/tipo_recarga.html">Bilhete Único</a>
+            <div class="holder_img_insert_card">
+                <a href="index.html">
+                    <img src="/código/assets/imgs/trans_concluida_icon.png" alt="icon_insira_cartão_débito">
+                </a>
             </div>
         </div>
     </div>
-
-    <div class="BG-Container3">
-        <div class="basecontainer">
-            <p id="text_base">CENTRAL DE ATENDIMENTO AO CLIENTE (11) 0000-0000</p>
-            <a type="button" class="cou_botao" id="btn4" href="consultar_qr_code.html">Consultar QR-CODE</a>
-        </div>
-    </div>
-
     <script src="/código/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
